# gtech

./: .gitignore  .gitmodules  GTECH.xmind  README.md  VERSION.txt  hello.cpp
01/: Makefile  hello.cpp
02/: Makefile  hellotriangle.cpp  hellotriangleEBO.cpp
03/: hellotriangleFragInterpol.cpp  hellotriangleUniform.cpp
04/: Makefile  fs.fs  triangle.cpp
inc/: ASSIMP  GENG  GLM  MESHCOMPONENT  SDL2  TXTR
inc/GL/: glew.h
inc/GLFW/: glfw3.h  glfw3native.h
inc/KAM/: Cam.h
inc/PRMTV/: Cube.h  CubeData.h  Primitive.h
inc/SHDR/: shdr.h
inc/STB/: stb_image.h
inc/TEST/: tbench.h
inc/UTIL/: Util.h
samples/01/: Makefile  hello.cpp
samples/02/: Makefile  hellotriangle.cpp
samples/03/: Makefile  hellotriangleUniform.cpp
samples/04/: Makefile  fs.fs  triangle.cpp  vs.vs
samples/05/: Makefile  fs.fs  fs_textureUnits.fs  fsribbon.fs  texture.cpp  textureRibbon.cpp  textureUnit.cpp  textureUnitTimed  textureUnitTimed.cpp
samples/06/: Makefile  transformation.cpp  vs.vs
samples/07/: coordinates.cpp  cube.cpp  cubes.cpp  vs.vs
samples/08/: CMakeLists.txt  G.cpp  G.h  Makefile  cam.cpp  camsample.cpp  cube.cpp  cube.h  frag.shdr  fs.fs  vrtx.shdr  vs.vs
samples/09/: Makefile  light.cpp  vs.vs
samples/Resources/: cube.blend  foxy.blend  foxy.blend1  monkey.blend
samples/Resources/Models/: monkey.blend  triangles.blend  triangles.blend1
samples/Resources/Primitives/: cube.cpp  triangle.cpp
samples/Resources/Shaders/smb/: frag.shdr
samples/Resources/Textures/: foxy.pxm
samples/gamepad/: CMakeLists.txt  camsample.cpp
samples/smb/: CMakeLists.txt  camsample.cpp  triangle.cpp
samples/triangle/: hellotriangle.cpp  hellotriangleEBO.cpp
src/ASSETMANAGER/: CMakeLists.txt  assetmanager.cpp  assetmanager.h  meshvaoarraymap.cpp  meshvaoarraymap.h
src/CAM/: CMakeLists.txt  Cam.h  Makefile
src/GENG/: CMakeLists.txt  GItem.cpp  GObj.cpp  Makefile  Thrd.cpp  g.cpp  g.h
src/GENG/tbench/: CMakeLists.txt  Makefile  test0.cpp  test1.cpp
src/KAM/: Cam.cpp  Item.h
src/MESHCOMPONENT/: CMakeLists.txt  GCamComponent.cpp  GCamComponent.h  GLoaderComponent.cpp  GLoaderComponent.h  GMaterialComponent.h  GMeshComponent.cpp  GMeshComponent.h  MeshComponent.h  OBJLoaderComponent.cpp  OBJLoaderComponent.h  Primitive.h
src/MESHCOMPONENT/readNodes/: CMakeLists.txt  ReadNodes.cpp
src/MESHCOMPONENT/tbench/: CMakeLists.txt  OBJLoaderComponent.cpp
src/MESHCOMPONENT/tbench/prop/: CMakeLists.txt  prop.cpp
src/PRMTV/: CMakeLists.txt  Cube.h  CubeData.cpp  CubeData.h  CubeObj.cpp  Cubedata.cpp  Cubedata.h  Light.h  Makefile  Primitive.h
src/RESOURCE/: .gitignore  CMakeLists.txt
src/RESOURCE/inc/: resourcer.h
src/SHDR/: CMakeLists.txt  Makefile  build.sh  prgrm.cpp  shdr.cpp  shdr.h  shdr_src.cpp
src/STB/: Makefile  stb_image.cpp
src/TXTR/: Makefile  Txtr.cpp  Txtr.h
src/UTIL/: CMakeLists.txt  Makefile  Util.cpp  Util.h
src/UTIL/tbench/: Makefile  test0.cpp
